--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "skeleton",
   "version": "1.0.0",
-  "description": "",
+  "description": "Skeleton MEAN stack application",
   "main": "server.js",
   "dependencies": {
+    "bower": "^1.7.9",
     "express": "^4.13.4",
     "mongojs": "^2.4.0",
     "morgan": "^1.7.0"
@@ -14,5 +15,13 @@
     "start": "node server.js"
   },
   "author": "Matthew Kelso",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mkelso/skeleton.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mkelso/skeleton/issues"
+  },
+  "homepage": "https://github.com/mkelso/skeleton#readme"
 }
